dfir_rs/tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs
../compile-fail/surface_fold_keyed_badtype_option.rs